# CutLocus

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/cutlocus_batch/: CMakeLists.txt  main.cpp
apps/cutlocus_gui/: CMakeLists.txt  app.cpp  app.h  cutlocus_gui.cpp  editing.h
data/: 3Torus_200k.ply  bunny_70k.ply  bunny_orignal.ply  spikey_sphere_210k.ply  torus_100k.ply  torus_10k.ply  torus_1k.ply  two_torus.ply
libs/: CMakeLists.txt
libs/libigl/include/igl/: boundary_facets.cpp  colon.cpp  cotmatrix_intrinsic.cpp  doublearea.cpp  grad.cpp  heat_geodesics.cpp  intrinsic_delaunay_triangulation.cpp  min_quad_with_fixed.cpp  principal_curvature.cpp  slice.cpp  slice_mask.cpp  tan_half_angle.cpp  unique_rows.cpp  volume.cpp
libs/realtime/: gpu.cpp  gpu.h  window.h
libs/realtime/glfw/src/splinesurf.build/Debug/glfw.build/Objects-normal/x86_64/: cocoa_init.d  cocoa_joystick.d  cocoa_monitor.d  egl_context.d  input.d  nsgl_context.d  osmesa_context.d  posix_thread.d  vulkan.d
libs/realtime/glfw/src/splinesurf.build/Release/glfw.build/Objects-normal/x86_64/: cocoa_time.d  cocoa_window.d  context.d  init.d  monitor.d  window.d
libs/src/: CMakeLists.txt  clio.cpp  clio.h  cut_locus.cpp  cut_locus.h  geometry.cpp  geometry.h  strip.h
libs/yocto/: CMakeLists.txt  yocto_commonio.h  yocto_mesh.cpp
libs/yocto_gui/: CMakeLists.txt  yocto_imgui.cpp  yocto_imgui.h  yocto_opengl.cpp  yocto_opengl.h  yocto_shade.cpp  yocto_shade.h
scripts/: build.py
